@@ -1,3 +1,12 @@
+2010-07-07  Marc André Lureau  <mlureau@flumotion.com>
+
+	reviewed by: Andoni Morales
+
+	* flumotion/component/dvb/admin_gtk.py:
+	* flumotion/component/dvb/dvb.py:
+	* flumotion/component/dvb/dvb.xml:
+	Replace videoscalling by videoscale effect
+
 2010-07-07  Andoni Morales Alastruey  <amorales@flumotion.com>
 
 	reviewed by: Marc André Lureau
